===================================
gnome-commander 1.4.6
---------------

Bug fixes:
 * Fixed problem bgo#747771 (appdata.xml file is not being translated, thanks to Dominique Leuenberger)
 * Fixed problem bgo#748869 (crash when searching two times consecutively)

===================================
gnome-commander 1.4.5
---------------

Bug fixes:
 * Fixed problem bgo#741316 (Appdata missing in POT) 
 * Fixed problem bgo#742716 (Option --start-right-dir crashes gnome-commander)
 * Removed python-2.6 support from gentoo ebuild
 * New or updated translations:
       hu (Balázs Úr)
       id (Andika Triwidada)
       sr (Мирослав Николић)
       sr@latin (Мирослав Николић)
New or updated docs:
    cs (Marek Černocký)

===================================
gnome-commander 1.4.4
---------------

Bug fixes:
 * Fixed problem bgo#571495 (Migrated from gnome_execute_shell to g_spawn_async)
 * Fixed problem bgo#737088 (Support for user's terminal different from gnome-terminal)
New or updated translations: 
    cs (Marek Černocký)
    de (Benjamin Steinwender)
    eu (Inaki Larranaga Murgoitio)
    fi (Lasse Liehu)
    id (Andika Triwidada)
    sr (Мирослав Николић) (sr@latin)
    sr@latin (Мирослав Николић)
New or updated docs:
    cs (Marek Černocký)
    es (Daniel Mustieles)

===================================
gnome-commander 1.4.3
---------------

Bug fixes:
 * Fixed problem bgo#731557 (Crash when drag 'n drop objects via mouse)
New or updated translations: 
    cs (Marek Černocký)
    de (Benjamin Steinwender)
    eu (Inaki Larranaga Murgoitio)
    fi (Lasse Liehu)
New or updated docs:
    cs (Marek Černocký)

===================================
gnome-commander 1.4.2
---------------

Bug fixes:
 * Fixed Gentoo problem #509574 (Switched from python-r1 to python-single-r1 in ebuild)
 * Fixed problem bgo#367949 (Corrected async_xfer_callback-results for moving folders)
 * Fixed problem bgo#598161 (Selecting text in internal viewer on lines with TANew features: