@@ -4,7 +4,10 @@ gnome-commander 1.4.6
 
 Bug fixes:
  * Fixed problem bgo#747771 (appdata.xml file is not being translated, thanks to Dominique Leuenberger)
+ * Fixed problem bgo#746003 (crash on opening property dialog on ftp-directory with "odd" uid)
  * Fixed problem bgo#748869 (crash when searching two times consecutively)
+ * Fixed problem bgo#747771 (Passwords store in plain text in ./gnome-commander/connections)
+ * Fixed problem bgo#742752 (Made options dialog resizable and added scrollbars)
 
 ===================================
 gnome-commander 1.4.5
